--- a/README.asciidoc
+++ b/README.asciidoc
@@ -3,4 +3,7 @@ Doxia Site Renderer Resources
 David Thomas Hume
 :Author Initials: DTH
 
-Resources files needed by custom Maven skins
+Resources files needed by custom Maven skins.
+
+The Maven generated project site can be found
+http://dthume.github.com/doxia-site-renderer-resources[here].
